--- a/CBS_Project/res/layout/activity_homescreen.xml
+++ b/CBS_Project/res/layout/activity_homescreen.xml
@@ -47,6 +47,7 @@
         android:layout_marginTop="54dp"
         android:scaleType="fitXY"
         android:src="@drawable/site"
+        android:onClick="gotoSites"
         tools:ignore="ContentDescription" />
 
     <ImageButton
