--- a/CBS_Project/res/layout/activity_sites.xml
+++ b/CBS_Project/res/layout/activity_sites.xml
@@ -16,7 +16,7 @@
         android:layout_height="fill_parent"
         android:layout_weight="4"
         android:contentDescription="@string/image_desc"
-        android:src="@drawable/SitesButton" />
+        android:src="@drawable/sitesbutton" />
 
     <EditText
         android:id="@+id/editText1"
